--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,76 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+}
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
+.wrapper {
+	padding: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form-wrapper {
+	padding: 20px;
+}
+h1 {
+	text-align: center;
+	font-family: Arial, Helvetica, sans-serif;
+}
+form {
+	border: 0.1rem solid rgba(209, 211, 198, 0.932);
+	padding: 10px;
+}
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+	background: #f2f2f2;
+	width: 100%;
+	margin: 12px 0 12px 0;
+	padding: 16px;
+	display: inline-block;
+	border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus {
+	background-color: wheat;
+	outline: none;
+}
+.name,
+.email,
+.password,
+.confirmPassword,
+.checkbox {
+	margin: 15px;
+}
+button {
+	width: 100%;
+	background-color: green;
+	color: white;
+	opacity: 0.8;
+	padding: 15px 20px;
+	margin: 10px 0;
+	cursor: pointer;
+	border: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+button:hover {
+	opacity: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.errormsg {
+	border: 1px solid;
+	margin: 10px 5px;
+	padding: 8px;
+	background-repeat: no-repeat;
+	background-position: 10px center;
+	color: #d8000c;
+	background-color: #ffbaba;
+	background-size: contain;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media screen and (max-width: 350px) {
+	.signupbutton {
+		width: 100%;
+	}
 }
